# String

./: .gitignore  LICENSE  README  TODO  readme.md
U8String/: CMakeLists.txt
U8String/Tests/: CharacterTest.cpp  StringIteratorTest.cpp  StringTest.cpp
U8String/UnicodeDataGenerator/: BidirectionalCategoryEnum.py  CPPGenerator.py  CharacterDecompositionMappingEnum.py  GeneralCategoryEnum.py  HPPGenerator.py  SpecialCasing.txt  SpecialCasingParser.py  UnicodeData.cpp  UnicodeData.hpp  UnicodeData.py  UnicodeDataGen.py  UnicodeDataParser.py  main.py
U8String/include/: Character.hpp  Character.inl  STLAlgoString.inl  String.hpp  String.inl  UnicodeData.hpp
U8String/src/: Character.cpp  String.cpp  UnicodeData.cpp
